@@ -13,7 +13,7 @@ import java.util.stream.Collectors;
 *
 *  int 与Integer定义的变量比较。，由于Java的自动拆箱和装箱机制会比较会是数值
 *
-*  Integer与Integer.valueOf在127及一下会相等，其余情况全不相等
+*  Integer与Integer.valueOf在-128-127会相等，其余情况全不相等
 *
 *
 * */
@@ -29,9 +29,9 @@ public class integer {
         }
     }
     public static void main(String[] args) {
-        Integer q=129;
-        Integer w =new Integer(129);
-        Integer e = Integer.valueOf(1);
+        Integer q=127;
+        Integer w =new Integer(127);
+        Integer e = Integer.valueOf(127);
         System.out.println(q==w);
         System.out.println(q==e);  //小于127为true
         System.out.println(w==e);
